--- a/config.json.template
+++ b/config.json.template
@@ -1,6 +1,11 @@
 {
-	"channels": ["#channel"],
+	"channels": [
+		"#channel"
+	],
 	"server": "irc.ircnetwork.domain",
 	"botName": "name-yer-bot",
-	"password": "super-secret"
+	"password": "super-secret",
+	"email": {
+		
+	}
 }
